# RenaissanceCRM

./: .gitignore  README.md  antigravity-crm-prompt.md  docker-compose.yml  get_gmail_token.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: aed668683b04_add_clay_company_employee_fields.py  b7406ad17ed5_initial_schema.py  c3f891d24a17_add_draft_emails_table.py  d7e4f891ab23_add_email_threads.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  exceptions.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: models.py
backend/app/modules/activities/: router.py  schemas.py
backend/app/modules/auth/: router.py  schemas.py
backend/app/modules/contacts/: router.py  schemas.py
backend/app/modules/customization/: router.py
backend/app/modules/deals/: router.py  schemas.py
backend/app/modules/draft_emails/: router.py
backend/app/modules/email_threads/: router.py
backend/app/modules/gmail/: router.py  service.py
backend/app/modules/integrations/n8n/: router.py  schemas.py
backend/app/modules/reporting/: router.py
docs/: n8n-integration.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  Sidebar.tsx
frontend/src/pages/: Activities.tsx  Companies.tsx  ContactDetail.tsx  Contacts.tsx  Dashboard.tsx  Deals.tsx  DraftEmails.tsx  Login.tsx  Settings.tsx
frontend/src/services/: api.ts
